--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
   
     <section class="card">
       <h2>Registrar estudiante</h2>
-      <input type="text" id="Nombre" placeholder="Nombre del estudiante" />
+      <input type="text" id="nombre" placeholder="Nombre del estudiante" />
       <input type="email" id="correo" placeholder="Correo" />
       <input type="text" id="clase" placeholder="Clase" />
       <button onclick="agregarEstudiante()">Agregar</button>
